# keras-hexagdly

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: README.md  bench.py  summarize.py
notebooks/: addressing_utils.py  cta_lst_hexconv_gamma_vs_noise.ipynb  hexplot.py  keras_hexagdly_2d_example.ipynb  keras_hexagdly_addressing_scheme.ipynb  keras_hexagdly_cnn_example.ipynb  keras_hexagdly_custom_kernels_example.ipynb  keras_hexagdly_hex_vs_square.ipynb  keras_hexagdly_hls4ml_export.ipynb  toy_data.py
src/keras_hexagdly/: __init__.py  hex_gather.py  hls4ml_ext.py  hls4ml_handler.py  indexed.py  layers.py  nnet_hex_gather.h  nnet_hex_gather_3d.h  nnet_hex_max_pool.h  nnet_hex_max_pool_3d.h  nnet_hex_ring_mac.h  nnet_hex_ring_mac_3d.h
tests/: _hex_reference.py  test_Conv2d.py  test_Conv2d_CustomKernel.py  test_Conv3d.py  test_Conv3d_CustomKernel.py  test_MaxPool2d.py  test_MaxPool3d.py  test_depth_padding.py  test_edge_cases.py  test_geometry.py  test_hls4ml_ext.py  test_indexed_equivalence.py  test_mixed_precision.py  test_serialization.py  test_share_neighbors.py  test_vs_pytorch_hexagdly.py
