[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keras-hexagdly"
version = "0.1.1"
description = "Hexagonal convolution and pooling layers for Keras 3 (TensorFlow / JAX / PyTorch) — a HexagDLy port"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tanguy Dietrich" },
]
requires-python = ">=3.9"
keywords = [
    "keras", "tensorflow", "jax", "pytorch",
    "hexagonal", "hexagonal-convolution", "hexagonal-grid",
    "convolution", "cnn", "deep-learning", "neural-networks",
    "geometric-deep-learning", "equivariant", "hexagdly",
    "astroparticle-physics", "iact", "cherenkov",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "keras>=3.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tensorflow",
    "torch",
    "hexagdly",
]

[project.urls]
Homepage = "https://github.com/YugnatD/keras-hexagdly"
Source = "https://github.com/YugnatD/keras-hexagdly"
Issues = "https://github.com/YugnatD/keras-hexagdly/issues"
Changelog = "https://github.com/YugnatD/keras-hexagdly/blob/main/CHANGELOG.md"
"Original (HexagDLy)" = "https://github.com/ai4iacts/hexagdly"

[tool.hatch.build.targets.wheel]
packages = ["src/keras_hexagdly"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E741",  # ambiguous variable name -- the layers mirror PyTorch HexagDLy's
             # math-notation variable names (i, l, kh, kw) on purpose
]
